# alphalens

./: .env.example  PHASE_5_IMPLEMENTATION.md  README.md  main.py  pyproject.toml  requirements.txt
alphalens/: __init__.py
alphalens/core/: database.py
alphalens/core/capital/: allocator.py
alphalens/core/corporate_actions/: adjuster.py
alphalens/core/cycle/: classifier.py  context.py  labeller.py
alphalens/core/indicators/: calculator.py
alphalens/core/ingestion/: fundamental.py  historical.py  universe.py  zerodha_import.py
alphalens/core/notifications/: email.py  telegram.py
alphalens/core/patterns/: hmm.py
alphalens/core/portfolio/: manager.py  pnl.py  reviewer.py
alphalens/core/signals/: generator.py  trigger_manager.py
alphalens/core/strategy/: backtester.py  discovery.py  library.py  new_strategies.py
alphalens/dashboard/: app.py
alphalens/dashboard/components/: navbar.py  shared.py
alphalens/dashboard/pages/: backtest.py  capital_config.py  corporate_actions.py  market_overview.py  patterns.py  pnl_report.py  portfolio.py  portfolio_entry.py  settings.py  stock_chart.py  strategies.py  trigger_validation.py  watchlist.py
alphalens/ml/features/: pipeline.py
alphalens/scheduler/: jobs.py
config/: settings.py
scripts/: setup.sh
