[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alphalens"
version = "1.0.0"
description = "AlphaLens — Nifty200 ML Trading Intelligence Platform"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["alphalens*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
